Fixed NavBar shows up in the wrong position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,6 @@ p { font-family: Arvo; font-size: 14px; font-style: normal; font-variant: normal
 blockquote { font-family: Arvo; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; }
 pre { font-family: Arvo; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
 
-
-/* .hl {
-  border: 1px solid var(--text);
-  background-color: var(--text);
-  border-radius: 2px;
-} */
-
 .tabBtn{
   color: white;
   /* font-weight: bold; */
@@ -112,17 +105,6 @@ div .tabActive{
   border:1.5px solid var(--header-hover);
 }
 
-/* .project-text a {
-  text-decoration: none;
-  font-weight: bold;
-  color: var(--header);
-  transition: all .3s ease-in-out;
-}
-
-.project-text a:hover {
-  color: var(--header-hover);
-} */
-
 footer {
   font-size: 48px;
   justify-content: center;
@@ -140,21 +122,4 @@ footer a:hover {
   opacity: 1;
   text-decoration: none;
   color: var(--text);
-}
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
